--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.1.0",
     "ya-csv": "0.9.4",
     "socket.io": "~1.3.7",
-    "http": "~0.0.0"
+    "http": "~0.0.0",
+    "cookie-parser": "~1.4.0"
   }
 }
